# auto-sre

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml
app/: server.py  storage.py
app/agent/: approval_policy.py  diagnoser_node.py  graph.py  notification_node.py  reporter_node.py  runtime_profile.py  sre_agent.py  state.py  trace.py  trace_runtime.py
app/api/: alert.py  audit_log.py  auth.py  chat_message.py  chat_session.py  deps.py  document.py  knowledge_base.py  monitoring.py  rag_permissions.py  trace.py  user.py  webhook.py
app/core/: client.py  config.py  logger.py  security.py
app/data/: audit.jsonl
app/db/: init_db.py  session.py
app/model/: alert_event.py  audit_log.py  chat.py  knowledge_base.py  user.py
app/notification/: dingtalk_notification.py  email_notification.py  feishu_notification.py  send_report.py
app/prompts/: diagnoser_system_prompt.py  (+2 more)
config/: alert_rules.yml  alertmanager.yml  prometheus.yml
tests/: test_alert_api_json_normalize.py  test_alert_detail_api.py  test_alert_stats_api.py  test_chat_service_stream_tool_results.py  test_dispatcher_cli_actions_dynamic.py  test_dispatcher_discovery_schema_source.py  test_dispatcher_executor_fallback.py  test_dispatcher_executor_retry.py  test_dispatcher_policy_schema.py  test_dispatcher_runtime_overrides.py  test_document_preview_api.py  test_llm_utils_reasoning_content.py  test_send_report_rendering.py  test_tool_manager_meta_tools.py  test_tools_live_invocation.py  test_trace_runtime.py  test_user_list_filters_system_account.py
(+59 files in other folders)
