[project]
name = "auto-sre"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.124.0",
    "langchain>=1.1.2",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "paramiko>=4.0.0",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
